--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>The Game</title>
 </head>
 <body>
+    <h1 class="timer"></h1>
+    <title>Florida Trivia</title>
+    <div id="main"></div>
     <script src="./script.js"></script>
 </body>
 </html>
