added some styles and created early quiz div layout

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="timer"></h1>
-    <title>Florida Trivia</title>
+    <h1 id="high">High Scores</h1>
+    <h2 class="timer"></h2>
+    <div id="main">
+        <p id="title">Florida Trivia</p>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
     <div id="main"></div>
     <script src="./script.js"></script>
 </body>
