added submit button for quiz and changed some colors

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <h1 id="high">High Scores</h1>
-    <h2 class="timer"></h2>
+    <h2 class="timer">0:00</h2>
     <div id="main">
         <p id="title">Florida Trivia</p>
+        <p id="question"></p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="a1"></li>
+            <li id="a2"></li>
+            <li id="a3"></li>
+            <li id="a4"></li>
         </ul>
+        <a href="#" class="submit">Submit</a>
     </div>
-    <div id="main"></div>
     <script src="./script.js"></script>
 </body>
 </html>
