--- a/index.html
+++ b/index.html
@@ -7,18 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="high">High Scores</h1>
-    <h2 class="timer">0:00</h2>
+    <h1 id="high">Hall of Fame</h1>
+    <h2 class="timer"></h2>
     <div id="main">
-        <p id="title">Florida Trivia</p>
-        <p id="question"></p>
-        <ul>
-            <li id="a1"></li>
-            <li id="a2"></li>
-            <li id="a3"></li>
-            <li id="a4"></li>
-        </ul>
-        <a href="#" class="submit">Submit</a>
+        <a href="#" class="button">Start</a>
     </div>
     <script src="./script.js"></script>
 </body>
