add functionality to start button. timer works.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="high">Hall of Fame</h1>
     <h2 class="timer"></h2>
     <div id="main">
-        <a href="#" class="button">Start</a>
+        <a class="button">Start</a>
     </div>
     <script src="./script.js"></script>
 </body>
