added unworking functions :D

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Game</title>
+    <title>The JS Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 id="high">Hall of Fame</h1>
     <h2 class="timer"></h2>
     <div id="main">
-        <a class="button">Start</a>
+        <ul id="theGame"></ul>
+        <a class="button1">Start</a>
     </div>
     <script src="./script.js"></script>
 </body>
