--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The JS Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1 id="high">Hall of Fame</h1>
     <h2 class="timer"></h2>
-    <div id="main">
-        <ul id="theGame"></ul>
-        <a class="button1">Start</a>
-    </div>
+    <h3>- JAVA QUIZ -</h3>
+    <div id="main"></div>
+    <a id="button1">Start</a>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
