started over. added labels. unable to populate questions without divs :/

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The JS Game</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1 id="high">Hall of Fame</h1>
-    <h2 class="timer"></h2>
-    <h3>- JAVA QUIZ -</h3>
-    <div id="main"></div>
-    <a id="button1">Start</a>
-    <script src="./script.js"></script>
-  </body>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>JavaQuiz</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div id="quizContainer" class="container">
+        <div class="title">Java Quiz</div>
+        <div id="question" class="question"></div>
+        <label class="option"><input type="radio" name="option" value="1" /> <span id="opt1"></span></label>
+        <label class="option"><input type="radio" name="option" value="2" /> <span id="opt2"></span></label>
+        <label class="option"><input type="radio" name="option" value="3" /> <span id="opt3"></span></label>
+        <label class="option"><input type="radio" name="option" value="4" /> <span id="opt4"></span></label>
+        <button id="nextButton" class="next-btn" onclick="loadNextQuestion();">Next Question</button>
+    </div>
+    <div id="result" class="container result" style="display: none;">
+    </div>
+    <script src="script.js"></script>
+    <script src="questions.js"></script>
+</body>
 </html>
