--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
+  <head lang="en">
+    <meta charset="UTF-8" />
     <title>JavaQuiz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
     <div id="quizContainer" class="container">
-        <div class="title">Java Quiz</div>
-        <div id="question" class="question"></div>
-        <label class="option"><input type="radio" name="option" value="1" /> <span id="opt1"></span></label>
-        <label class="option"><input type="radio" name="option" value="2" /> <span id="opt2"></span></label>
-        <label class="option"><input type="radio" name="option" value="3" /> <span id="opt3"></span></label>
-        <label class="option"><input type="radio" name="option" value="4" /> <span id="opt4"></span></label>
-        <button id="nextButton" class="next-btn" onclick="loadNextQuestion();">Next Question</button>
+      <div class="title">Java Quiz</div>
+      <div id="question" class="question"></div>
+      <label class="option"
+        ><input type="radio" name="option" value="1" /> <span id="opt1"></span
+      ></label>
+      <label class="option"
+        ><input type="radio" name="option" value="2" /> <span id="opt2"></span
+      ></label>
+      <label class="option"
+        ><input type="radio" name="option" value="3" /> <span id="opt3"></span
+      ></label>
+      <label class="option"
+        ><input type="radio" name="option" value="4" /> <span id="opt4"></span
+      ></label>
+      <button id="nextButton" class="next-btn" onclick="loadNextQuestion();">
+        Next Question
+      </button>
+      <a href="#" class="button">START</a>
     </div>
-    <div id="result" class="container result" style="display: none;">
-    </div>
-    <script src="script.js"></script>
+
+    <div id="result" class="container result" style="display: none;"></div>
     <script src="questions.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
