everything works. mostly.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
         style="display: none;"
       />
       <a href="#" class="myButton" style="display: none;">SUBMIT</a>
+      <h3>Hall Of Fame</h3>
+      <div class="hof" style="display: none;"></div>
+      <a href="#" id="restart" class="myButton" style="display: none;"
+        >RESTART</a
+      >
     </div>
+
     <script src="questions.js"></script>
     <script src="script.js"></script>
   </body>
