--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaQuiz</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Orbitron:wght@900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="quizContainer" class="container">
