--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <!-- Main container that holds questions and answers. Text populates when start button is pressed. -->
     <div id="quizContainer" class="container">
       <h1 id="timer" style="display: unset;"></h1>
       <div class="title">Java Quiz</div>
@@ -33,6 +34,7 @@
       <a href="#" class="button" style="display: top;">START</a>
     </div>
 
+    <!--Containers for final score, input controls, and high scores. They will display after final answer is submitted.-->
     <div id="result" class="container result" style="display: none;"></div>
     <div id="scoreC" class="container score" style="display: none;">
       <input
