--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
       <label class="option"
         ><input type="radio" name="option" value="4" /> <span id="opt4"></span
       ></label>
-      <button id="nextButton" class="next-btn" onclick="loadNextQuestion();">
+      <button
+        id="nextButton"
+        class="next-btn"
+        onclick="loadNextQuestion();"
+        style="display: none;"
+      >
         Next Question
       </button>
       <a href="#" class="button" style="display: top;">START</a>
